// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu tests should match snapshot hidden 1`] = `
<DocumentFragment>
  <button
    aria-controls="id"
    aria-expanded="false"
    aria-haspopup="menu"
    type="button"
  >
    Open
  </button>
  @keyframes animation-0 {
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1,150;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -35;
  }

  100% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -124;
  }
}

.emotion-25 {
  border: 0;
  padding: 0rem;
  outline: none;
  z-index: 999;
}

.emotion-5 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
  color: #323845;
  font-size: 0.875rem;
  height: 32px;
  width: 100%;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  text-transform: initial;
}

.emotion-5:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5:focus {
  background-color: rgba(218,227,245,0.32);
  outline: none;
  box-shadow: none;
}

.emotion-5:hover {
  color: #323845;
}

.emotion-5:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-5:disabled {
  color: #898F9E;
}

.emotion-5 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 svg {
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3 {
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  bottom: 0rem;
  top: 0rem;
  left: 0rem;
  right: 0rem;
  visibility: hidden;
}

.emotion-2 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  -webkit-animation: animation-0 1.5s linear infinite;
  animation: animation-0 1.5s linear infinite;
}

.emotion-1 {
  fill: none;
  stroke: currentColor;
  stroke-width: 5;
  stroke-linecap: round;
  -webkit-animation: animation-1 1s ease-in-out infinite;
  animation: animation-1 1s ease-in-out infinite;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  margin-top: 0.25rem;
  padding: 0.75rem;
  min-width: 18px;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: #C4C5CA;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

.emotion-24 hr {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-style: solid;
  border-bottom-width: 1px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: #C4C5CA;
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

.emotion-24 item {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  color: #323845;
}

.emotion-24 item div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 item svg {
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-24 item:focus {
  background-color: rgba(218,227,245,0.32);
  outline: none;
  box-shadow: none;
}

.emotion-24 item:hover {
  color: #323845;
}

.emotion-24 item-dangerous {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  color: #CB4242;
}

.emotion-24 item-dangerous div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 item-dangerous svg {
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-24 item-dangerous:focus {
  background-color: rgba(254,218,218,0.32);
  outline: none;
  box-shadow: none;
}

.emotion-24 item-dangerous:hover {
  color: #CB4242;
}

<div
    aria-label="menu label"
    aria-orientation="vertical"
    class="emotion-25"
    data-dialog="true"
    data-testid="menu"
    hidden=""
    id="id"
    role="menu"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-24"
      data-testid="menubox"
    >
      <button
        class="emotion-5"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-0"
          >
             Download
          </div>
          <div
            class="emotion-3"
          >
            <svg
              class="emotion-2"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-1"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-2"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-0"
          >
             Link to
          </div>
          <div
            class="emotion-3"
          >
            <svg
              class="emotion-2"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-1"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-3"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-0"
          >
             Favorite
          </div>
          <div
            class="emotion-3"
          >
            <svg
              class="emotion-2"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-1"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        id="id-4"
        role="menuitem"
        tabindex="-1"
      />
      <button
        class="emotion-5"
        id="id-5"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-0"
          >
             Delete
          </div>
          <div
            class="emotion-3"
          >
            <svg
              class="emotion-2"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-1"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu tests should match snapshot visible 1`] = `
<DocumentFragment>
  <button
    aria-controls="id"
    aria-expanded="true"
    aria-haspopup="menu"
    type="button"
  >
    Open
  </button>
  @keyframes animation-0 {
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1,150;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -35;
  }

  100% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -124;
  }
}

.emotion-25 {
  border: 0;
  padding: 0rem;
  outline: none;
  z-index: 999;
}

.emotion-5 {
  font-family: VTEXTrustVF,-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'wght' 92;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
  color: #323845;
  font-size: 0.875rem;
  height: 32px;
  width: 100%;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  text-transform: initial;
}

.emotion-5:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5:focus {
  background-color: rgba(218,227,245,0.32);
  outline: none;
  box-shadow: none;
}

.emotion-5:hover {
  color: #323845;
}

.emotion-5:active {
  color: #1a3470;
  background-color: rgba(186,203,236,0.32);
}

.emotion-5:disabled {
  color: #898F9E;
}

.emotion-5 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 svg {
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3 {
  position: absolute;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  bottom: 0rem;
  top: 0rem;
  left: 0rem;
  right: 0rem;
  visibility: hidden;
}

.emotion-2 {
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  -webkit-animation: animation-0 1.5s linear infinite;
  animation: animation-0 1.5s linear infinite;
}

.emotion-1 {
  fill: none;
  stroke: currentColor;
  stroke-width: 5;
  stroke-linecap: round;
  -webkit-animation: animation-1 1s ease-in-out infinite;
  animation: animation-1 1s ease-in-out infinite;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #FFFFFF;
  margin-top: 0.25rem;
  padding: 0.75rem;
  min-width: 18px;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: #C4C5CA;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

.emotion-24 hr {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-style: solid;
  border-bottom-width: 1px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: #C4C5CA;
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

.emotion-24 item {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  color: #323845;
}

.emotion-24 item div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 item svg {
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-24 item:focus {
  background-color: rgba(218,227,245,0.32);
  outline: none;
  box-shadow: none;
}

.emotion-24 item:hover {
  color: #323845;
}

.emotion-24 item-dangerous {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  color: #CB4242;
}

.emotion-24 item-dangerous div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-24 item-dangerous svg {
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-24 item-dangerous:focus {
  background-color: rgba(254,218,218,0.32);
  outline: none;
  box-shadow: none;
}

.emotion-24 item-dangerous:hover {
  color: #CB4242;
}

<div
    aria-label="menu label"
    aria-orientation="vertical"
    class="emotion-25"
    data-dialog="true"
    data-testid="menu"
    id="id"
    role="menu"
    tabindex="-1"
  >
    <div
      class="emotion-24"
      data-testid="menubox"
    >
      <button
        class="emotion-5"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-0"
          >
             Download
          </div>
          <div
            class="emotion-3"
          >
            <svg
              class="emotion-2"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-1"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-2"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-0"
          >
             Link to
          </div>
          <div
            class="emotion-3"
          >
            <svg
              class="emotion-2"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-1"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-3"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-0"
          >
             Favorite
          </div>
          <div
            class="emotion-3"
          >
            <svg
              class="emotion-2"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-1"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        id="id-4"
        role="menuitem"
        tabindex="-1"
      />
      <button
        class="emotion-5"
        id="id-5"
        role="menuitem"
        tabindex="-1"
        type="button"
      >
        <div
          class="emotion-4"
        >
          <div
            class="emotion-0"
          >
             Delete
          </div>
          <div
            class="emotion-3"
          >
            <svg
              class="emotion-2"
              fill="none"
              focusable="false"
              viewBox="0 0 50 50"
            >
              <circle
                class="emotion-1"
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
